--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,18 @@
 {
-	"name": "boost",
-	"dependencies": {}
+  "name": "projectname",
+  "description": "",
+  "main": [],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "angular": "^1.5.7",
+    "ng-material-facade": "https://github.com/marcosflorencio/angular-material-facade.git/#~*",
+    "angular-ui-router": "^0.3.1"
+  }
 }
